--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "sass": "^1.39.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.20",
-    "@types/styled-components": "^5.1.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.2"
