--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["abid", "Btns", "Coinranking", "cryptosphere", "Linkedin", "shahriar", "wikiance"]
+  "cSpell.words": ["abid", "Btns", "Coinranking", "cryptosphere", "Linkedin", "shahriar", "toastify", "whitesmoke", "wikiance"]
 }
